@@ -1,71 +1,88 @@
 package be.seeseemelk.mockbukkit.inventory.meta;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
-
+import be.seeseemelk.mockbukkit.MockBukkit;
 import be.seeseemelk.mockbukkit.MockPlugin;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
+import com.google.common.collect.LinkedHashMultimap;
+import com.google.common.collect.Multimap;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeModifier;
 import org.bukkit.enchantments.Enchantment;
+import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.Damageable;
 import org.bukkit.inventory.meta.Repairable;
 import org.bukkit.persistence.PersistentDataType;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.bukkit.util.io.BukkitObjectInputStream;
+import org.bukkit.util.io.BukkitObjectOutputStream;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import be.seeseemelk.mockbukkit.MockBukkit;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
-public class ItemMetaMockTest
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertThrowsExactly;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+class ItemMetaMockTest
 {
+
 	private ItemMetaMock meta;
 
-	@Before
-	public void setUp()
+	@BeforeEach
+	void setUp()
 	{
 		MockBukkit.mock();
 		meta = new ItemMetaMock();
 	}
 
-	@After
-	public void tearDown()
+	@AfterEach
+	void tearDown()
 	{
 		MockBukkit.unmock();
 	}
 
 	@Test
-	public void new_CopyConstructor_Copied()
+	void new_CopyConstructor_Copied()
 	{
 		meta.setDisplayName("Some name");
-		meta.setLore(Arrays.asList("lore"));
+		meta.setLore(List.of("lore"));
 		meta.setUnbreakable(true);
 		meta.addItemFlags(ItemFlag.HIDE_ENCHANTS, ItemFlag.HIDE_ATTRIBUTES);
 		ItemMetaMock meta2 = new ItemMetaMock(meta);
-		meta2.setLore(Arrays.asList("lore"));
-		assertTrue(meta2.equals(meta));
-		assertTrue(meta.equals(meta2));
+		meta2.setLore(List.of("lore"));
+		assertEquals(meta2, meta);
+		assertEquals(meta, meta2);
 		assertEquals(meta.hashCode(), meta2.hashCode());
 		assertEquals(meta.getItemFlags(), meta2.getItemFlags());
 	}
 
 	@Test
-	public void hasDisplayName_Default_False()
+	void hasDisplayName_Default_False()
 	{
 		assertFalse(meta.hasDisplayName());
 	}
 
 	@Test
-	public void setDisplayName_NewName_NameSetExactly()
+	void setDisplayName_NewName_NameSetExactly()
 	{
 		meta.setDisplayName("Some name");
 		assertTrue(meta.hasDisplayName());
@@ -73,7 +90,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void setDisplayName_Null_NameRemoves()
+	void setDisplayName_Null_NameRemoves()
 	{
 		meta.setDisplayName("Some name");
 		meta.setDisplayName(null);
@@ -81,7 +98,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_SameWithoutDisplayName_True()
+	void equals_SameWithoutDisplayName_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		assertEquals(meta, meta2);
@@ -89,7 +106,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_SameWithDisplayName_True()
+	void equals_SameWithDisplayName_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDisplayName("Some name");
@@ -99,7 +116,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_SameLore_True()
+	void equals_SameLore_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setLore(Collections.singletonList("lore"));
@@ -110,7 +127,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_DifferentDisplayName_False()
+	void equals_DifferentDisplayName_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDisplayName("Some name");
@@ -120,7 +137,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_OneWithDisplayNameOneWithout_False()
+	void equals_OneWithDisplayNameOneWithout_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDisplayName("Some name");
@@ -129,7 +146,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_OneWithLoreOneWithout_False()
+	void equals_OneWithLoreOneWithout_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setLore(Collections.singletonList("lore"));
@@ -138,7 +155,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_DifferentSizedLore_False()
+	void equals_DifferentSizedLore_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setLore(Collections.singletonList("lore"));
@@ -148,14 +165,14 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_Null_False()
+	void equals_Null_False()
 	{
 		assertNotEquals(meta, null);
 		assertNotEquals(null, meta);
 	}
 
 	@Test
-	public void equals_DamageSame_True()
+	void equals_DamageSame_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDamage(10);
@@ -165,7 +182,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_DamageDifferent_False()
+	void equals_DamageDifferent_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDamage(10);
@@ -175,7 +192,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_DamageOneWithout_False()
+	void equals_DamageOneWithout_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setDamage(10);
@@ -184,7 +201,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_EnchantsSame_True()
+	void equals_EnchantsSame_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addEnchant(Enchantment.DURABILITY, 5, true);
@@ -194,7 +211,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_EnchantsDifferent_False()
+	void equals_EnchantsDifferent_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addEnchant(Enchantment.DURABILITY, 5, true);
@@ -205,7 +222,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_EnchantsDifferentLevel_False()
+	void equals_EnchantsDifferentLevel_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addEnchant(Enchantment.DURABILITY, 5, true);
@@ -215,7 +232,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_EnchantsOneEmpty_False()
+	void equals_EnchantsOneEmpty_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addEnchant(Enchantment.DURABILITY, 5, true);
@@ -224,7 +241,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_HideFlagsSame_True()
+	void equals_HideFlagsSame_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES, ItemFlag.HIDE_DYE);
@@ -234,7 +251,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_HideFlagsDifferent_False()
+	void equals_HideFlagsDifferent_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES, ItemFlag.HIDE_DYE);
@@ -244,7 +261,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_HideFlagsOneEmpty_False()
+	void equals_HideFlagsOneEmpty_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
@@ -253,7 +270,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_PersistentDataSame_True()
+	void equals_PersistentDataSame_True()
 	{
 		MockPlugin plugin = MockBukkit.createMockPlugin();
 		ItemMetaMock meta2 = new ItemMetaMock();
@@ -265,7 +282,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_PersistentDataDifferent_False()
+	void equals_PersistentDataDifferent_False()
 	{
 		MockPlugin plugin = MockBukkit.createMockPlugin();
 		ItemMetaMock meta2 = new ItemMetaMock();
@@ -277,7 +294,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_PersistentDataOneEmpty_False()
+	void equals_PersistentDataOneEmpty_False()
 	{
 		MockPlugin plugin = MockBukkit.createMockPlugin();
 		ItemMetaMock meta2 = new ItemMetaMock();
@@ -288,7 +305,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_UnbreakableSame_True()
+	void equals_UnbreakableSame_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setUnbreakable(true);
@@ -302,7 +319,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_UnbreakableDifferent_False()
+	void equals_UnbreakableDifferent_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setUnbreakable(true);
@@ -312,7 +329,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_CustomModelDataSame_True()
+	void equals_CustomModelDataSame_True()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setCustomModelData(10);
@@ -322,7 +339,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_CustomModelDataDifferent_False()
+	void equals_CustomModelDataDifferent_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setCustomModelData(10);
@@ -332,7 +349,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void equals_CustomModelDataOneWithout_False()
+	void equals_CustomModelDataOneWithout_False()
 	{
 		ItemMetaMock meta2 = new ItemMetaMock();
 		meta.setCustomModelData(10);
@@ -341,29 +358,29 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void clone_WithDisplayName_ClonedExactly()
+	void clone_WithDisplayName_ClonedExactly()
 	{
 		meta.setDisplayName("Some name");
-		ItemMetaMock cloned = (ItemMetaMock) meta.clone();
+		ItemMetaMock cloned = meta.clone();
 		assertEquals(meta, cloned);
 		assertEquals(meta.hashCode(), cloned.hashCode());
 	}
 
 	@Test
-	public void hasLore_NoLore_False()
+	void hasLore_NoLore_False()
 	{
 		assertFalse(meta.hasLore());
 	}
 
 	@Test
-	public void hasLore_HasLore_True()
+	void hasLore_HasLore_True()
 	{
 		meta.setLore(Arrays.asList("Hello", "world"));
 		assertTrue(meta.hasLore());
 	}
 
 	@Test
-	public void getLore_LoreSet_ExactLines()
+	void getLore_LoreSet_ExactLines()
 	{
 		meta.setLore(Arrays.asList("Hello", "world"));
 		List<String> lore = meta.getLore();
@@ -373,7 +390,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void getLore_LoreChangedAfterSet_LoreNotChanged()
+	void getLore_LoreChangedAfterSet_LoreNotChanged()
 	{
 		List<String> originalLore = Arrays.asList("Hello", "world");
 		meta.setLore(originalLore);
@@ -387,7 +404,21 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void hasEnchants()
+	void hasLocalizedName_NoLocalizedName_False()
+	{
+		assertFalse(meta.hasLocalizedName());
+	}
+
+	@Test
+	void setLocalizedName_NewName_NameSetExactly()
+	{
+		meta.setLocalizedName("Some name");
+		assertTrue(meta.hasLocalizedName());
+		assertEquals("Some name", meta.getLocalizedName());
+	}
+
+	@Test
+	void hasEnchants()
 	{
 		assertFalse(meta.hasEnchants());
 		meta.addEnchant(Enchantment.DURABILITY, 1, true);
@@ -395,7 +426,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void hasEnchant()
+	void hasEnchant()
 	{
 		assertFalse(meta.hasEnchant(Enchantment.MENDING));
 		meta.addEnchant(Enchantment.MENDING, 1, true);
@@ -403,7 +434,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void getEnchantLevel()
+	void getEnchantLevel()
 	{
 		assertEquals(0, meta.getEnchantLevel(Enchantment.DURABILITY));
 		meta.addEnchant(Enchantment.DURABILITY, 50, true);
@@ -411,85 +442,85 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void getEnchants()
+	void getEnchants()
 	{
 		meta.addEnchant(Enchantment.DURABILITY, 3, true);
 
 		Map<Enchantment, Integer> actual = meta.getEnchants();
 		assertEquals(1, actual.size());
-		assertTrue(3 == actual.get(Enchantment.DURABILITY));
+		assertEquals(3, actual.get(Enchantment.DURABILITY));
 	}
 
 	@Test
-	public void removeEnchant_NotExisting()
+	void removeEnchant_NotExisting()
 	{
 		assertFalse(meta.removeEnchant(Enchantment.DAMAGE_ALL));
 	}
 
 	@Test
-	public void removeEnchant()
+	void removeEnchant()
 	{
 		meta.addEnchant(Enchantment.DAMAGE_ALL, 5, true);
 		assertTrue(meta.removeEnchant(Enchantment.DAMAGE_ALL));
 	}
 
 	@Test
-	public void addEnchant_IgnoreLevel()
+	void addEnchant_IgnoreLevel()
 	{
 		assertTrue(meta.addEnchant(Enchantment.DURABILITY, 100, true));
 		assertTrue(meta.hasEnchant(Enchantment.DURABILITY));
 	}
 
 	@Test
-	public void addEnchant_AlreadyExist()
+	void addEnchant_AlreadyExist()
 	{
 		meta.addEnchant(Enchantment.DURABILITY, 100, true);
 		assertFalse(meta.addEnchant(Enchantment.DURABILITY, 100, true));
 	}
 
 	@Test
-	public void setUnbreakable_True_ItemIsUnbreakable()
+	void setUnbreakable_True_ItemIsUnbreakable()
 	{
 		meta.setUnbreakable(true);
 		assertTrue(meta.isUnbreakable());
 	}
 
 	@Test
-	public void setUnbreakable_False_ItemIsBreakable()
+	void setUnbreakable_False_ItemIsBreakable()
 	{
 		meta.setUnbreakable(false);
 		assertFalse(meta.isUnbreakable());
 	}
 
 	@Test
-	public void assertHasNoLore_HasNoLore_Returns()
+	void testHasNoLore_HasNoLore_Returns()
 	{
-		meta.assertHasNoLore();
-	}
-
-	@Test(expected = AssertionError.class)
-	public void assertHasNoLore_HasNoLore_Asserts()
-	{
-		meta.setLore(Arrays.asList("Hello", "world"));
 		meta.assertHasNoLore();
 	}
 
 	@Test
-	public void assertLore_CorrectLore_Returns()
+	void testHasNoLore_HasNoLore_Asserts()
+	{
+		meta.setLore(Arrays.asList("Hello", "world"));
+		assertThrows(AssertionError.class, meta::assertHasNoLore);
+	}
+
+	@Test
+	void testLore_CorrectLore_Returns()
 	{
 		meta.setLore(Arrays.asList("Hello", "world"));
 		meta.assertLore("Hello", "world");
 	}
 
-	@Test(expected = AssertionError.class)
-	public void assertLore_InorrectLore_Asserts()
+	@Test
+	void testLore_InorrectLore_Asserts()
 	{
 		meta.setLore(Arrays.asList("Hello", "world"));
-		meta.assertLore("Something", "else");
+		assertThrows(AssertionError.class, () -> meta.assertLore("Something", "else"));
 	}
 
 	@Test
-	public void assertDamageCorrectlySet()
+	void testDamageCorrectlySet()
 	{
 		int value = 500;
 		meta.setDamage(value);
@@ -503,7 +534,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void assertNoDamage()
+	void testNoDamage()
 	{
 		meta.setDamage(0);
 		ItemStack item = new ItemStack(Material.DIAMOND_SWORD);
@@ -516,7 +547,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void assertRepairCostCorrectlySet()
+	void testRepairCostSetCorrectly()
 	{
 		int value = 10;
 		meta.setRepairCost(value);
@@ -530,7 +561,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void assertNoRepairCost()
+	void testRepairCost()
 	{
 		meta.setRepairCost(0);
 		ItemStack item = new ItemStack(Material.DIAMOND_SWORD);
@@ -543,7 +574,7 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void assertCustomModelData()
+	void testCustomModelData()
 	{
 		meta.setCustomModelData(null);
 		assertFalse(meta.hasCustomModelData());
@@ -554,41 +585,273 @@ public class ItemMetaMockTest
 	}
 
 	@Test
-	public void assertSerialize()
+	void testSerialization()
 	{
-
 		// Tests for displayName, Lore, enchants, unbreakable status, and damage
 		meta.setDisplayName("Test name");
-		meta.setLore(Arrays.asList("Test lore"));
+		meta.setLore(List.of("Test lore"));
 		meta.setUnbreakable(true);
 		meta.setDamage(5);
 		meta.setRepairCost(3);
 
-		Map<String, Object> expected = new HashMap<>();
-		expected.put("displayName", "Test name");
-		expected.put("lore", Arrays.asList("Test lore"));
-		expected.put("unbreakable", true);
-		expected.put("damage", 5);
-		expected.put("repairCost", 3);
-
 		Map<String, Object> actual = meta.serialize();
 
 		// Perform tests
-		assertEquals(expected.get("displayName"), actual.get("displayName"));
-		assertEquals(expected.get("lore"), actual.get("lore"));
-		assertEquals(expected.get("unbreakable"), actual.get("unbreakable"));
-		assertEquals(expected.get("damage"), actual.get("damage"));
-		assertEquals(expected.get("repairCost"), actual.get("repairCost"));
-
+		assertEquals("{\"text\":\"Test name\"}", actual.get("display-name"));
+		assertEquals(List.of("{\"text\":\"Test lore\"}"), actual.get("lore"));
+		assertEquals(true, actual.get("Unbreakable"));
+		assertEquals(5, actual.get("Damage"));
+		assertEquals(3, actual.get("repair-cost"));
 	}
 
 	@Test
-	public void assertDeserialize()
+	void testDeserialization()
 	{
-
 		Map<String, Object> actual = meta.serialize();
-
 		assertEquals(meta, ItemMetaMock.deserialize(actual));
-
 	}
+
+	@Test
+	void testBukkitSerialization() throws IOException, ClassNotFoundException
+	{
+		ItemMetaMock empty = new ItemMetaMock();
+		ItemMetaMock modified = new ItemMetaMock();
+
+		modified.setDisplayName("Test name");
+		modified.setLore(List.of("Test lore"));
+		modified.setUnbreakable(true);
+		modified.setDamage(5);
+		modified.setRepairCost(3);
+		modified.setCustomModelData(2);
+
+		ByteArrayOutputStream byteOutput = new ByteArrayOutputStream();
+		BukkitObjectOutputStream bukkitOutput = new BukkitObjectOutputStream(byteOutput);
+
+		bukkitOutput.writeObject(empty);
+		bukkitOutput.writeObject(modified);
+
+		ByteArrayInputStream byteInput = new ByteArrayInputStream(byteOutput.toByteArray());
+		BukkitObjectInputStream bukkitInput = new BukkitObjectInputStream(byteInput);
+
+		assertEquals(empty, bukkitInput.readObject());
+		assertEquals(modified, bukkitInput.readObject());
+
+		bukkitOutput.close();
+		bukkitInput.close();
+	}
+
+	@Test
+	void hasAttributeModifiers_Constructor_Empty()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertFalse(meta.hasAttributeModifiers());
+	}
+
+	@Test
+	void getAttributeModifiers_Constructor_Null()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertNull(meta.getAttributeModifiers());
+	}
+
+	@Test
+	void setAttributeModifiers_NullMap()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		meta.setAttributeModifiers(null);
+
+		assertFalse(meta.hasAttributeModifiers());
+	}
+
+	@Test
+	void setAttributeModifiers_AddsEntries()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		Multimap<Attribute, AttributeModifier> modifiers = LinkedHashMultimap.create();
+		AttributeModifier modifier = new AttributeModifier("test", 1, AttributeModifier.Operation.ADD_NUMBER);
+		modifiers.put(Attribute.GENERIC_ARMOR, modifier);
+
+		meta.setAttributeModifiers(modifiers);
+
+		assertEquals(1, meta.getAttributeModifiers().size());
+		assertEquals(1, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).size());
+		assertEquals(modifier, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).stream().findFirst().orElse(null));
+	}
+
+	@Test
+	void setAttributeModifiers_RemovesAndAddsEntries()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		Multimap<Attribute, AttributeModifier> oldModifiers = LinkedHashMultimap.create();
+		oldModifiers.put(Attribute.GENERIC_ARMOR, new AttributeModifier("test_1", 1, AttributeModifier.Operation.ADD_NUMBER));
+		meta.setAttributeModifiers(oldModifiers);
+		Multimap<Attribute, AttributeModifier> modifiers = LinkedHashMultimap.create();
+		AttributeModifier modifier = new AttributeModifier("test_2", 1, AttributeModifier.Operation.ADD_NUMBER);
+		modifiers.put(Attribute.GENERIC_ARMOR_TOUGHNESS, modifier);
+
+		meta.setAttributeModifiers(modifiers);
+
+		assertEquals(1, meta.getAttributeModifiers().size());
+		assertEquals(1, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR_TOUGHNESS).size());
+		assertEquals(modifier, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR_TOUGHNESS).stream().findFirst().orElse(null));
+	}
+
+	@Test
+	void getAttributeModifiers_Slot()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		Multimap<Attribute, AttributeModifier> modifiers = LinkedHashMultimap.create();
+		AttributeModifier modifier1 = new AttributeModifier(UUID.randomUUID(), "test_1", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.HEAD);
+		AttributeModifier modifier2 = new AttributeModifier(UUID.randomUUID(), "test_2", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.CHEST);
+		modifiers.put(Attribute.GENERIC_ARMOR, modifier1);
+		modifiers.put(Attribute.GENERIC_ARMOR, modifier2);
+
+		meta.setAttributeModifiers(modifiers);
+
+		assertEquals(1, meta.getAttributeModifiers(EquipmentSlot.HEAD).size());
+		assertEquals(1, meta.getAttributeModifiers(EquipmentSlot.HEAD).get(Attribute.GENERIC_ARMOR).size());
+		assertEquals(modifier1, meta.getAttributeModifiers(EquipmentSlot.HEAD).get(Attribute.GENERIC_ARMOR).stream().findFirst().orElse(null));
+	}
+
+	@Test
+	void getAttributeModifiers_NullAttribute_ThrowException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.getAttributeModifiers((Attribute) null));
+	}
+
+	@Test
+	void addAttributeModifier_AddsOne()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier = new AttributeModifier("test", 1, AttributeModifier.Operation.ADD_NUMBER);
+
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier);
+
+		assertEquals(1, meta.getAttributeModifiers().size());
+		assertEquals(1, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).size());
+		assertEquals(modifier, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).stream().findFirst().orElse(null));
+	}
+
+	@Test
+	void addAttributeModifier_Duplicate_ThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier = new AttributeModifier("test", 1, AttributeModifier.Operation.ADD_NUMBER);
+
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier);
+
+		assertThrowsExactly(IllegalArgumentException.class, () -> meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier));
+	}
+
+	@Test
+	void addAttributeModifier_NullAttribute_ThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier = new AttributeModifier("test", 1, AttributeModifier.Operation.ADD_NUMBER);
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.addAttributeModifier(null, modifier));
+	}
+
+	@Test
+	void addAttributeModifier_NullModifier_ThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.addAttributeModifier(Attribute.GENERIC_ARMOR, null));
+	}
+
+	@Test
+	void removeAttribute_Attribute()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier = new AttributeModifier("test", 1, AttributeModifier.Operation.ADD_NUMBER);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier);
+
+		assertTrue(meta.hasAttributeModifiers());
+
+		meta.removeAttributeModifier(Attribute.GENERIC_ARMOR);
+
+		assertFalse(meta.hasAttributeModifiers());
+	}
+
+	@Test
+	void removeAttribute_Attribute_NullThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.removeAttributeModifier((Attribute) null));
+	}
+
+	@Test
+	void removeAttribute_Slot_RemovesCorrectSlot()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier1 = new AttributeModifier(UUID.randomUUID(), "test_1", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.HEAD);
+		AttributeModifier modifier2 = new AttributeModifier(UUID.randomUUID(), "test_2", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.CHEST);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier1);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier2);
+
+		assertEquals(2, meta.getAttributeModifiers().size());
+		meta.removeAttributeModifier(EquipmentSlot.HEAD);
+		assertEquals(1, meta.getAttributeModifiers().size());
+		assertEquals(modifier2, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).stream().findFirst().orElse(null));
+	}
+
+	@Test
+		// May seem a little weird, but this is what Spigot does
+		// (https://hub.spigotmc.org/stash/projects/SPIGOT/repos/craftbukkit/browse/src/main/java/org/bukkit/craftbukkit/inventory/CraftMetaItem.java#1019)
+	void removeAttribute_Slot_RemovesAllNoSlots()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		Multimap<Attribute, AttributeModifier> modifiers = LinkedHashMultimap.create();
+		AttributeModifier modifier1 = new AttributeModifier("test_1", 1, AttributeModifier.Operation.ADD_NUMBER);
+		AttributeModifier modifier2 = new AttributeModifier("test_2", 1, AttributeModifier.Operation.ADD_NUMBER);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier1);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier2);
+
+		meta.removeAttributeModifier(EquipmentSlot.HEAD);
+
+		assertFalse(meta.hasAttributeModifiers());
+	}
+
+	@Test
+	void removeAttribute_SpecificModifier_Removes()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		Multimap<Attribute, AttributeModifier> modifiers = LinkedHashMultimap.create();
+		AttributeModifier modifier1 = new AttributeModifier(UUID.randomUUID(), "test_1", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.HEAD);
+		AttributeModifier modifier2 = new AttributeModifier(UUID.randomUUID(), "test_2", 1, AttributeModifier.Operation.ADD_NUMBER, EquipmentSlot.CHEST);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier1);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier2);
+
+		meta.removeAttributeModifier(Attribute.GENERIC_ARMOR, modifier1);
+
+		assertEquals(1, meta.getAttributeModifiers().size());
+		assertEquals(modifier2, meta.getAttributeModifiers().get(Attribute.GENERIC_ARMOR).stream().findFirst().orElse(null));
+	}
+
+	@Test
+	void removeAttribute_SpecificModifier_NullAttribute_ThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+		AttributeModifier modifier = new AttributeModifier("test_1", 1, AttributeModifier.Operation.ADD_NUMBER);
+		meta.addAttributeModifier(Attribute.GENERIC_ARMOR, modifier);
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.removeAttributeModifier(null, modifier));
+	}
+
+	@Test
+	void removeAttribute_SpecificModifier_NullModifier_ThrowsException()
+	{
+		ItemMetaMock meta = new ItemMetaMock();
+
+		assertThrowsExactly(NullPointerException.class, () -> meta.removeAttributeModifier(Attribute.GENERIC_ARMOR, null));
+	}
+
 }
